examples/issues/issue_1584/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy
  labels:
    service: network-policy
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
  ingress:
    - from:
        - podSelector:
            matchLabels:
    - ports:
        - port: 80
          protocol: TCP
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: web
    - ports:
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
        - port: 80
          protocol: TCP
